# aw-watcher-template

./: LICENSE  README.md  pyproject.toml
aw_watcher_template/: __main__.py  main.py
